[gd_scene load_steps=20 format=3 uid="uid://dc73l1rm1ebsg"]

[ext_resource type="PackedScene" uid="uid://b1qs0xiynwe8u" path="res://player.tscn" id="1_1xadd"]
[ext_resource type="Script" path="res://main.gd" id="1_blrvs"]
[ext_resource type="PackedScene" uid="uid://c0qkufevdka6i" path="res://table.tscn" id="1_hykti"]
[ext_resource type="Script" path="res://CameraPivot2.gd" id="2_mlohh"]
[ext_resource type="PackedScene" uid="uid://cdjenfp8kn6u2" path="res://falling_thing.tscn" id="4_yd8ee"]
[ext_resource type="Script" path="res://Camera3D.gd" id="5_2pxol"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7ajaa"]
size = Vector3(60, 1, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6rt4d"]
albedo_color = Color(0.154876, 0.154876, 0.154876, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g261f"]
material = SubResource("StandardMaterial3D_6rt4d")
size = Vector3(60, 1, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_kw0go"]
size = Vector3(1, 4, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ariaa"]
albedo_color = Color(0.42867, 0.566071, 0.978578, 1)

[sub_resource type="BoxMesh" id="BoxMesh_a3115"]
material = SubResource("StandardMaterial3D_ariaa")
size = Vector3(1, 4, 17)

[sub_resource type="BoxShape3D" id="BoxShape3D_muhxh"]
size = Vector3(16, 4, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a470e"]
albedo_color = Color(0.427451, 0.564706, 0.980392, 1)

[sub_resource type="BoxMesh" id="BoxMesh_rwscm"]
material = SubResource("StandardMaterial3D_a470e")
size = Vector3(16, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7r0p"]
size = Vector3(17, 1, 17)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jqqbh"]
albedo_color = Color(0.721828, 0.999198, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7ptd3"]
material = SubResource("StandardMaterial3D_jqqbh")
size = Vector3(17, 1, 17)

[sub_resource type="Theme" id="Theme_g4in4"]
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_blrvs")
falling_scene = ExtResource("4_yd8ee")

[node name="Player" parent="." instance=ExtResource("1_1xadd")]

[node name="CameraPivot2" type="Marker3D" parent="Player"]
transform = Transform3D(0.953717, 0, 0.300706, 0, 1, 0, -0.300706, 0, 0.953717, 0, 0, 0)
script = ExtResource("2_mlohh")

[node name="Camera3D" type="Camera3D" parent="Player/CameraPivot2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 3)
script = ExtResource("5_2pxol")
shakeReduction = 0.1

[node name="Tables" type="Node3D" parent="."]

[node name="Table1" parent="Tables" instance=ExtResource("1_hykti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="Table2" parent="Tables" instance=ExtResource("1_hykti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="Table3" parent="Tables" instance=ExtResource("1_hykti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="Table4" parent="Tables" instance=ExtResource("1_hykti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="Boundary" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Ground"]
shape = SubResource("BoxShape3D_7ajaa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Ground"]
mesh = SubResource("BoxMesh_g261f")

[node name="Wall1" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Wall1"]
shape = SubResource("BoxShape3D_kw0go")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Wall1"]
mesh = SubResource("BoxMesh_a3115")

[node name="Wall2" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Wall2"]
shape = SubResource("BoxShape3D_kw0go")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Wall2"]
mesh = SubResource("BoxMesh_a3115")

[node name="Wall3" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Wall3"]
shape = SubResource("BoxShape3D_muhxh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Wall3"]
mesh = SubResource("BoxMesh_rwscm")

[node name="Wall4" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Wall4"]
shape = SubResource("BoxShape3D_muhxh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Wall4"]
mesh = SubResource("BoxMesh_rwscm")

[node name="Ceiling" type="StaticBody3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary/Ceiling"]
shape = SubResource("BoxShape3D_k7r0p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boundary/Ceiling"]
mesh = SubResource("BoxMesh_7ptd3")

[node name="Lights" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.5, -0.75, 0.433013, 0, 0.5, 0.866025, -0.866025, -0.433013, 0.25, 6, 3.5, 6)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.5, -0.75, -0.433013, 0, -0.5, 0.866025, -0.866025, -0.433013, -0.25, -6, 3.5, -6)

[node name="Timers" type="Node3D" parent="."]

[node name="ShakeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="FallingTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="GameDurationTimer" type="Timer" parent="Timers"]
wait_time = 61.0
one_shot = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_g4in4")

[node name="TimeLabel" type="Label" parent="UserInterface"]
layout_mode = 0
anchor_left = 0.772569
anchor_top = 0.0324074
anchor_right = 0.972222
anchor_bottom = 0.0802469
theme_override_colors/font_color = Color(0, 0, 1, 1)
text = "Elapesed Time: 0s"
horizontal_alignment = 2
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="ElapsedTimer" type="Timer" parent="UserInterface"]

[node name="LifeLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 40.0
offset_top = 25.0
offset_right = 154.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Life: 0"

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.5
offset_right = 20.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to start."

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="Timers/ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="Timers/FallingTimer" to="." method="_on_falling_timer_timeout"]
[connection signal="timeout" from="Timers/GameDurationTimer" to="." method="_on_game_duration_timer_timeout"]
[connection signal="timeout" from="UserInterface/ElapsedTimer" to="." method="_on_elapsed_timer_timeout"]
